Atualizando o pom.xml com dependências do JavaFX